<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EstadisticaInferencial</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="bienvenida">Bienvenidos a la aplicacion para estadistica Inferencial Porfavor use uno de los siguientes submenus</string>
    <string name="Probabilidad">Probabilidad y Estadistica</string>
    <string name="Inferencial">Estadistica Inferencial</string>
    <string name="GraficarNormal">Graficar Curva Normal</string>
    <string name="RegresionLineal">Regresion Lineal</string>
    <string name="GraficarTabla">Graficar Tabla</string>
    <string name="estimeacionMedia">Estimacion de la Media </string>
    <string name="title_activity_graficar">Graficar</string>
    <string name="medi">media</string>
    <string name="mediaMuestral">media muestrales</string>
    <string name="muestra">muestra</string>
    <string name="poblacion">poblacion</string>
    <string name="mediaPoblacional">media poblacional</string>
    <string name="desviacionesPoblacionales">desviaciones poblacionales</string>
    <string name="desviacion">desviacion</string>
    <string name="title_activity_estadistica_menu">EstadisticaMenu</string>
    <string name="funEst">Todas las funciones de probabilidad y estadistica</string>
    <string name="title_activity_grafica_normal">GraficaNormal</string>
    <string name="title_activity_menu_estadistica_basica">MenuEstadisticaBasica</string>
    <string name="errorEstandar">Error Estandar</string>
    <string name="Lineal">Distribucion Lineal</string>
    <string name="Normal">Distribucion Normal</string>
    <string name="Binomial">Distribución Binomial</string>
    <string name="Multinomial">Distribución Multinomial</string>
    <string name="Hipergeometrica ">Distribución Hipergeometrica</string>
    <string name="binomialNegativa">Distribución Binomial Negativa</string>
    <string name="Geometrica">Distribución Geometrica</string>
    <string name="Poinson">Distribución de Poisson</string>
    <string name="Texto2">Seleccione de las siguientes distribuciones de probabilidad:</string>
    <string name="title_activity_binomial">Binomial</string>
    <string name="p">p:</string>
    <string name="x">x:</string>
    <string name="X">X:</string>
    <string name="n">n:</string>
    <string name="N">N:</string>
    <string name="k">k:</string>
    <string name="resultado"></string>
    <string name="vacio">resultado:</string>
    <string name="aceptar">aceptar</string>
    <string name="title_activity_hipergeometrica">Hipergeometrica</string>
    <string name="title_activity_binomial_negativa">BinomialNegativa</string>
    <string name="title_activity_geometrica">Geometrica</string>
    <string name="title_activity_poisson">Poisson</string>
    <string name="ocurrencia">ocurrencia:</string>
    <string name="title_activity_lineal">Lineal</string>
    <string name="title_activity_normal">Normal</string>
    <string name="title_activity_error_estadndar">ErrorEstadndar</string>
    <string name="title_activity_menu_estadistica_inferencial">Estadistica Inferencial</string>
    <string name="title_activity_estimacion_de_la_media">EstimacionDeLaMedia</string>
    <string name="title_activity_regresion_lineal">Regresion Lineal</string>
    <string name="title_activity_intervalos">Intervalos</string>
    <string name="title_activity_prueba_hipotesis">PruebaHipotesis</string>
    <string name="title_activity_estimacion_por_proporcion">EstimacionPorProporcion</string>
    <string name="title_activity_estadistica_descriptiva">EstadisticaDescriptiva</string>
    <string name="title_activity_calculadora">Calculadora</string>
    <string name="title_activity_herramientas">Herramientas</string>

</resources>